--- a/app/src/main/res/layout/activity_result1.xml
+++ b/app/src/main/res/layout/activity_result1.xml
@@ -27,7 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:textSize="16sp" />
 
         <Button
             android:id="@+id/button"
