--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
             android:layout_weight="1"
             android:background="@android:drawable/btn_default"
             android:maxHeight="100dp"
+            android:onClick="onClickTask2"
             android:text="Завдання 2"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="@android:color/primary_text_light" />
