--- a/app/src/main/res/layout/activity_result2.xml
+++ b/app/src/main/res/layout/activity_result2.xml
@@ -7,4 +7,39 @@
     android:layout_height="match_parent"
     tools:context=".ResultActivity2">
 
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+
+        <TextView
+            android:id="@+id/textView18"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Результат"
+            android:textSize="34sp" />
+
+        <TextView
+            android:id="@+id/showResult2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginBottom="10dp"
+            android:onClick="onClickMain"
+            android:text="На головну" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
